--- a/templates/harry.html
+++ b/templates/harry.html
@@ -31,13 +31,18 @@
                     </li>
 
                 </ul>
-                {% if user %}
+                
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    {% if user %}
                     <li class="nav-item">
                         <a class="nav-link text-danger" href="/logout">Logout</a>
                     </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <p class="nav-link text-dark"> <i>Register for Privacy</i></p>
+                    </li>
+                    {% endif %}
                 </ul>
-                {% endif %}
 
             </div>
         </div>
@@ -47,9 +52,6 @@
 
 <body class="container px-3">
     <h1><i>Add Notes</i></h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
 
     <form action="/" method="post">
         <div class="mb-3">
@@ -69,59 +71,65 @@
 
     {% if MyTodo|length == 0 %}
     <div class="alert alert-secondary" role="alert">
-        No record, Add your first todo
+        Free to pour your first thoughts/feeling/Notes.
     </div>
     {% else %}
 
-    
+
     {% if user %}
+
+    <div class="accordion" id="accordionExample">
         {% for todo in MyTodo %}
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button collapsed d-flex justify-content-between align-items-center"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-                        <span>{{todo.title}}</span>
-                        <span class="ms-auto text-muted small"><i>{{todo.date}}</i></span>
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        {{todo.desp}}
-                        <br>
-                        <div class="px-1 py-1">
-                            <a href="/delete/{{todo.sno}}" class="btn btn-danger btn-sm" role="button">Delete</a>
-                            <a href="/update/{{todo.sno}}" class="btn btn-primary btn-sm" role="button">Update</a>
-                        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="heading{{todo.sno}}">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapse{{todo.sno}}" aria-expanded="false" aria-controls="collapse{{todo.sno}}">
+                    <span>{{todo.title}}</span>
+                    <span class="ms-auto text-muted small"><i>{{todo.date}}</i></span>
+                </button>
+            </h2>
+            <div id="collapse{{todo.sno}}" class="accordion-collapse collapse" aria-labelledby="heading{{todo.sno}}"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    {{todo.desp}}
+                    <hr>
+                    <div class="px-1">
+                        <a href="/delete/{{todo.sno}}" class="btn btn-danger btn-sm" role="button">Delete</a>
+                        <a href="/update/{{todo.sno}}" class="btn btn-primary btn-sm" role="button">Update</a>
                     </div>
                 </div>
             </div>
+        </div>
         {% endfor %}
-        {% else %}
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">Title</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Date</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for todo in MyTodo %}
-                <tr class="border-dark">
-                    <td>{{todo.title}}</td>
-                    <td>{{todo.desp}}</td>
-                    <td>{{todo.date}}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        {% endif %}
+    </div>
+    {% else %}
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Description</th>
+                <th scope="col">Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for todo in MyTodo %}
+            <tr class="border-dark">
+                <td>{{todo.title}}</td>
+                <td>{{todo.desp}}</td>
+                <td>{{todo.date}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% endif %}
 
     {% endif %}
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
+<br>
 <footer>
     <div class="card">
         <div class="card-header">
@@ -133,7 +141,7 @@
                     <p>When you open up to someone who listens without judgment, your mind begins to breathe easier</p>
                 </blockquote>
                 <figcaption class="blockquote-footer">
-                     <!-- text-add-here--> <cite title="Source Title">Anonymous</cite>
+                    <!-- text-add-here--> <cite title="Source Title">Anonymous</cite>
                 </figcaption>
             </figure>
         </div>
