--- a/templates/login.html
+++ b/templates/login.html
@@ -24,8 +24,10 @@
         <p class="text-danger">{% if error %}{{error}}{% endif %}</p>
         <button type="submit" class="btn btn-primary w-100">Login</button>
       </form>
-      <div class="text-center mt-3">
+      <div class="text-center mt-3 px-1">
+        <a href="/fp" class="text-decoration-none">Forgot password</a><br>
         <a href="/register" class="text-decoration-none">Don't have an account? Register</a>
+        
       </div>
     </div>
   </div>
