--- a/templates/register.html
+++ b/templates/register.html
@@ -17,14 +17,20 @@
       <form action="/register" method="post">
         <div class="mb-3">
           <label for="username" class="form-label">Username</label>
-          <input type="text" class="form-control" id="username" name="user" placeholder="Enter username" required>
+          <input type="text" class="form-control" id="username" name="user" minlength="6" placeholder="Enter username"
+            required>
         </div>
         <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" name="pwd" minlength="4"
-            placeholder="Enter password" required>
-        </div>
-        <button type="submit" class="btn btn-primary w-100">Register</button>
+          <label for="mail" class="form-label">Email</label>
+          <input type="email" class="form-control" id="password" name="mail" placeholder="Enter mail" required>
+          <div id="emailHelp" class="form-text">Give correct mail for future.</div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" name="pwd" minlength="4"
+              placeholder="Enter password" required>
+          </div>
+          <p class="text-danger">{{error if error else ""}}</p>
+          <button type="submit" class="btn btn-primary w-100">Register</button>
       </form>
       <div class="text-center mt-3">
         <a href="/login" class="text-decoration-none">Have an account, Login</a>
