--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
         <div class="mb-3">
           <label for="mail" class="form-label">Email</label>
           <input type="email" class="form-control" id="password" name="mail" placeholder="Enter mail" required>
-          <div id="emailHelp" class="form-text">Give correct mail for future.</div>
+          <div id="emailHelp" class="form-text">Give correct mail for Contant/Info.</div>
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" name="pwd" minlength="4"
